# RPA

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  rpa.key
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  rpa.py
app/core/: config.py
app/schemas/: __init__.py  persona.py
app/services/rpa/: __init__.py  base.py  browser.py  exceptions.py  extractors.py  scraper.py  service.py  storage.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: auth.py  rpa.py  searches.py
backend/app/core/: config.py
backend/app/schemas/: __init__.py  persona.py
backend/app/services/google/: __init__.py  auth.py  drive_storage.py  sheets_log.py
backend/app/services/google/credentials/: token.json
backend/app/services/jobs/: __init__.py  manager.py  models.py
backend/app/services/rpa/: __init__.py  browser.py  extractors.py  models.py  scraper.py  service.py  storage.py
backend/scripts/: plot_metrics.py  run.sh  setup.sh
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BenefitTable.tsx  BenefitTracker.tsx  ProgressTimeline.tsx  SearchBar.tsx  SessionCard.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useJobStream.ts  useNow.ts  useTheme.ts
frontend/src/pages/: DataExplorer.tsx  Home.tsx
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts
scripts/: setup.sh
(+3 files in other folders)
